# vue-course

./: .eslintrc  .gitignore  Makefile  conf.json  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.husky/: pre-commit
e2e/: addProductInBasket.test.ts
server/: .gitignore  Dockerfile  conf.yaml  docker-compose.yaml  manage.py  ngrok.yml  pyproject.toml
server/app/: __init__.py  models.py  queries.py  routes.py
server/scripts/: run.sh
src/: App.vue  main.ts  style.scss  types.ts
src/components/: AddComment.vue  AddProduct.vue  Alert.test.ts  Alert.vue  Catalog.vue  Feedback.vue  Filter.vue  Footer.vue  Header.vue  Login.test.ts  Login.vue  Order.vue  types.ts
src/components/common/: Button.vue  CardProduct.vue  Counter.vue  InputBlock.vue  SearchField.vue
src/components/common/Grid/: Grid.vue  GridTitle.vue  style.scss
src/components/common/Inputs/: Base.vue  Email.vue  Password.vue  Phone.vue  (+1 more)
src/pages/: Admin.vue  Basket.vue  Catalog.vue  Contacts.vue  NotFound.vue  Product.vue
src/router/: index.ts
src/services/: addComment.test.ts  addComment.ts  addOrder.test.ts  addOrder.ts  addProduct.test.ts  addProduct.ts  checkUser.test.ts  checkUser.ts  filterProducts.test.ts  filterProducts.ts  getAllUsers.test.ts  getAllUsers.ts  getComments.test.ts  getComments.ts  getLocalProducts.test.ts  getLocalProducts.ts  getProducts.ts  services.test.ts  utils.test.ts  utils.ts
src/store/pinia/: basket.test.ts  basket.ts  user.ts
src/store/vuex/: index.test.ts  index.ts
