[tool.poetry]
name = "app"
version = "0.1.0"
description = "Test server for vue-course"
authors = ["Игорь Иванов <is.ivanov@bars.group>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask-sqlalchemy = "^3.0.5"
pyyaml = "^6.0.1"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev_server = "manage:run_server"
create_tables = "app.models:create_tables"